@@ -1,3 +1,4 @@
+2002 [Update] added build number check for profiles
 2001 [MKV Demuxer] added status information to progress window
      [One-Click] fixed handling of PGS subtitles
 2000 [One-Click] if the source is a MKV file and target container is MKV the subtitles will be copied
